--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200..700&family=Vollkorn+SC:wght@400;600;700;900&display=swap" rel="stylesheet">
+
     <title>Mirage</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="" alt="Mitsuba">
+            <img src="./img/pngtree-mitsubishi-lancer-evolution-vector-png-image_7607065.png" alt="Mitsuba" width="60vh">
         </div>
         <nav class="headerNavBar">
-            <button>
                 <a href="#">Гараж</a>
                 <a href="#">Галерея</a>
                 <a href="#">Справочник</a>
-            </button>
         </nav>
+        <div class="key"><img  src="./img/free-icon-wrench-31056.png" alt="Ключ" width="30vh"></div>
+        
     </header>
     <main>
-        
+
     </main>
     <footer></footer>
 </body>
